--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     left: 60px;
     font-size: 30px;
     font-weight: 600;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: red;
     z-index: 1;
 }
