--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     z-index: 0;
 }
 
-#scoreboard {
+#scoredisplay {
     position: absolute;
     top: 10px;
     left: 60px;
@@ -14,4 +14,14 @@
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: red;
     z-index: 1;
+}
+
+#scoreBoard {
+    position: absolute;
+    top: 300px;
+    left: 400px;
+    font-size: 30px;
+    color: red;
+    z-index: 1;
+    display: none;
 }
