--- a/style.css
+++ b/style.css
@@ -3,10 +3,12 @@
     width: 855px;
     height: 480px;
     z-index: 0;
+    background-color: black;
 }
 
 #scoredisplay {
     position: absolute;
+    display: none;
     top: 10px;
     left: 60px;
     font-size: 30px;
@@ -18,10 +20,50 @@
 
 #scoreBoard {
     position: absolute;
+    display: none;
     top: 300px;
     left: 400px;
     font-size: 30px;
     color: red;
     z-index: 1;
-    display: none;
 }
+
+button {
+    position:absolute;
+    top: calc(480px/2 - 2.1em);
+    left: calc(855px/2 - 6.5em);
+    padding: 0.1em 0.25em;
+    width: 13em;
+    height: 4.2em;
+    background-color: #212121;
+    border: 0.08em solid #fff;
+    border-radius: 0.3em;
+    font-size: 12px;
+    cursor: pointer;
+  }
+  
+  button span {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0.4em;
+    width: 8.25em;
+    height: 2.5em;
+    background-color: #212121;
+    border-radius: 0.2em;
+    font-size: 1.5em;
+    color: #fff;
+    border: 0.08em solid #fff;
+    box-shadow: 0 0.4em 0.1em 0.019em #fff;
+  }
+  
+  button span:hover {
+    transition: all 0.5s;
+    transform: translate(0, 0.4em);
+    box-shadow: 0 0 0 0 #fff;
+  }
+  
+  button span:not(hover) {
+    transition: all 1s;
+  }
